--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,16 @@
             "email": "kostasmgl@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "altorouter/altorouter": "1.1.0",
+        "illuminate/database": "^5.3",
+        "fzaninotto/faker": "^1.6",
+        "respect/validation": "^1.1",
+        "hautelook/phpass": "^1.0"
+    },
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {"App\\": "app/"}
+    }
+
 }
